# Patent-assistant

./: .env.example  .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  requirements.txt  run.py
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: publish.yml
config/: chapter_schema.yaml  prompts.yaml  settings.py
src/: main.py
src/db/: __init__.py
src/models/: chapter.py  figure.py  project.py  schemas.py
src/routes/: chapters.py  export.py  figures.py  generation.py  projects.py
src/services/: ai_service.py  analysis_service.py  export_service.py  generation_service.py  prompt_loader.py
src/static/css/: style.css
src/static/js/: api.js  common.js  project.js
src/templates/: base.html  index.html  project.html
